feat: Add field validators

--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -38,13 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e7310c45",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pydantic import BaseModel, Field, StrictBool, StrictInt, StrictStr"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -72,6 +70,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95ddaa1f",
+   "metadata": {},
+   "source": [
+    "## 2.1 Pydantic in general"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d380dec3",
    "metadata": {},
    "source": [
@@ -84,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d24bc9ee",
    "metadata": {},
    "outputs": [],
@@ -101,28 +107,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3634f76",
+   "metadata": {},
+   "source": [
+    "## 2.2 Fields"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73f9130c",
    "metadata": {},
    "source": [
-    "Attributes of Pydantic class are defined as `Fields`. `Fields` can be customized in a number of ways using the `Field()` function."
+    "Attributes of Pydantic class are defined as fields.\n",
+    "\n",
+    "These fields can have different types. You can use the standard types library but also Strict types from the Pydantic library and custom data types:\n",
+    "- Standard Library Types: Types from the python standard library.\n",
+    "- Strict Types: Types that enable you to prevent coercion from compatible types.\n",
+    "- Custom Data Types: Create your own custom data types.\n",
+    "- Field Type Conversions: Strict and lax conversion between different field types."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "e174b51b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, ConfigDict, StrictBool, StrictInt, StrictStr\n",
+    "\n",
+    "\n",
+    "class User(BaseModel):\n",
+    "    id: StrictInt\n",
+    "    name: StrictStr = 'Jane Doe'\n",
+    "    is_active: StrictBool = True\n",
+    "\n",
+    "    model_config = ConfigDict(str_max_length=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "558918d6",
+   "metadata": {},
+   "source": [
+    "Fields can be customized in a number of ways using the `Field()` function. You can add a default value, a pattern for strings, description of the attribute, etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "e47c4599",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pydantic import BaseModel, Field, ConfigDict, StrictInt, StrictStr\n",
+    "\n",
     "class User(BaseModel):\n",
-    "    id: int\n",
-    "    name: str = Field(\n",
+    "    id: StrictInt\n",
+    "    name: StrictStr = Field(\n",
     "        default=\"Jane Doe\",\n",
     "        pattern=r\"[A-Z]{1}[a-z]+ [A-Z]{1}[a-z]\",\n",
     "        description=\"The user's full name.\",\n",
     "    )\n",
     "\n",
     "    model_config = ConfigDict(str_max_length=10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99941282",
+   "metadata": {},
+   "source": [
+    "## 2.3 Define a pydantic object"
    ]
   },
   {
@@ -135,11 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e5feb8fc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pydantic import BaseModel, Field, StrictBool, StrictStr, ValidationError\n",
+    "\n",
     "class Musician(BaseModel):\n",
     "    \"\"\"Class representing a musician with validated fields.\"\"\"\n",
     "\n",
@@ -168,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "e0f775a1",
    "metadata": {},
    "outputs": [
@@ -178,7 +236,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Rock', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +254,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
+   "id": "4e60b840",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for Musician\n",
+      "instrument\n",
+      "  String should match pattern '(Guitar|Bass|Drums|Vocals|Keyboard)' [type=string_pattern_mismatch, input_value='Trumpet', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/string_pattern_mismatch\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    miles_davis = Musician(\n",
+    "        name=\"Miles Davis\",\n",
+    "        instrument=\"Trumpet\",\n",
+    "        genre=\"Jazz\",\n",
+    "        years_active=33,\n",
+    "    )\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d659595",
+   "metadata": {},
+   "source": [
+    "## 2.4 Protect fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "c3c7b478",
    "metadata": {},
    "outputs": [
@@ -206,7 +301,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Blues', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,9 +314,201 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8c6fd99",
+   "metadata": {},
+   "source": [
+    "However, if you want to protect it, you can freeze the fields setting the parameter `frozen=True`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "22701d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import ValidationError\n",
+    "\n",
+    "class Musician(BaseModel):\n",
+    "    \"\"\"Class representing a musician with validated fields.\"\"\"\n",
+    "\n",
+    "    name: StrictStr = Field(\n",
+    "        pattern=r\"[A-Z]{1}[a-z]+ [A-Z]{1}[a-z]\",\n",
+    "        description=\"The name of the musician. First and last name, capitalized.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    instrument: StrictStr = Field(\n",
+    "        pattern=r\"(Guitar|Bass|Drums|Vocals|Keyboard)\",\n",
+    "        description=\"The instrument played by the musician.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    genre: StrictStr = Field(\n",
+    "        pattern=r\"[A-Za-z]+\",\n",
+    "        description=\"The genre of music the musician is associated with.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    years_active: int = Field(\n",
+    "        ge=0,\n",
+    "        le=100,\n",
+    "        description=\"Number of years the musician has been active in their career.\",\n",
+    "    )\n",
+    "    is_active: StrictBool = Field(\n",
+    "        default=True,\n",
+    "        description=\"Indicates if the musician is currently active.\",\n",
+    "    )\n",
+    "\n",
+    "john_mayer = Musician(\n",
+    "    name=\"John Mayer\",\n",
+    "    instrument=\"Guitar\",\n",
+    "    genre=\"Rock\",\n",
+    "    years_active=27,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2c1aa26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for Musician\n",
+      "instrument\n",
+      "  Field is frozen [type=frozen_field, input_value='Piano', input_type=str]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/frozen_field\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    john_mayer.instrument = \"Piano\"\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b05609c",
+   "metadata": {},
+   "source": [
+    "## 2.5 Validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b33ea0e5",
+   "metadata": {},
+   "source": [
+    "### 2.5.1 Field validators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3ddf0c9",
+   "metadata": {},
+   "source": [
+    "In its simplest form, a field validator is a callable taking the value to be validated as an argument and returning the validated value. The callable can perform checks for specific conditions (see raising validation errors) and make changes to the validated value (coercion or mutation).\n",
+    "\n",
+    "Four different types of validators can be used. They can all be defined using the annotated pattern or using the `field_validator()` decorator, applied on a class method:\n",
+    "\n",
+    "- After validators: run after Pydantic's internal validation. They are generally more type safe and thus easier to implement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "96539295",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import field_validator\n",
+    "\n",
+    "class Musician(BaseModel):\n",
+    "    \"\"\"Class representing a musician with validated fields.\"\"\"\n",
+    "\n",
+    "    name: StrictStr = Field(\n",
+    "        pattern=r\"[A-Z]{1}[a-z]+ [A-Z]{1}[a-z]\",\n",
+    "        description=\"The name of the musician. First and last name, capitalized.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    instrument: StrictStr = Field(\n",
+    "        pattern=r\"(Guitar|Bass|Drums|Vocals|Keyboard)\",\n",
+    "        description=\"The instrument played by the musician.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    genre: StrictStr = Field(\n",
+    "        pattern=r\"[A-Za-z]+\",\n",
+    "        description=\"The genre of music the musician is associated with.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    years_active: int = Field(\n",
+    "        ge=0,\n",
+    "        le=100,\n",
+    "        description=\"Number of years the musician has been active in their career.\",\n",
+    "    )\n",
+    "    is_active: StrictBool = Field(\n",
+    "        default=True,\n",
+    "        description=\"Indicates if the musician is currently active.\",\n",
+    "    )\n",
+    "    list_of_albums: list[StrictStr] = Field(\n",
+    "        default_factory=list,\n",
+    "        description=\"A list of the musician's albums.\",\n",
+    "    )\n",
+    "\n",
+    "    @field_validator('list_of_albums', mode='after')\n",
+    "    def check_albums_not_empty(cls, v):\n",
+    "        if not v:\n",
+    "            raise ValueError(\"The list of albums cannot be empty.\")\n",
+    "        return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8fbd844f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for Musician\n",
+      "list_of_albums\n",
+      "  Value error, The list of albums cannot be empty. [type=value_error, input_value=[], input_type=list]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    juan_pablo = Musician(\n",
+    "        name=\"Juan Pablo\",\n",
+    "        instrument=\"Vocals\",\n",
+    "        genre=\"Reggae\",\n",
+    "        years_active=2,\n",
+    "        list_of_albums=[],\n",
+    "    )\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3200b305",
+   "metadata": {},
+   "source": [
+    "- Before validators: run before Pydantic's internal parsing and validation (e.g. coercion of a str to an int). These are more flexible than after validators, but they also have to deal with the raw input, which in theory could be any arbitrary object. You should also avoid mutating the value directly if you are raising a validation error later in your validator function, as the mutated value may be passed to other validators if using unions.\n",
+    "The value returned from this callable is then validated against the provided type annotation by Pydantic."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c6fd99",
+   "id": "349c586d",
    "metadata": {},
    "outputs": [],
    "source": []
