feat(pydantic): Add model validators

--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "d24bc9ee",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "e174b51b",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "e47c4599",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e5feb8fc",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "e0f775a1",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Rock', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "4e60b840",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "c3c7b478",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Blues', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "22701d21",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "id": "2c1aa26a",
    "metadata": {},
    "outputs": [
@@ -415,12 +415,12 @@
     "\n",
     "Four different types of validators can be used. They can all be defined using the annotated pattern or using the `field_validator()` decorator, applied on a class method:\n",
     "\n",
-    "- After validators: run after Pydantic's internal validation. They are generally more type safe and thus easier to implement."
+    "- __After validators__: run after Pydantic's internal validation. They are generally more type safe and thus easier to implement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "96539295",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "8fbd844f",
    "metadata": {},
    "outputs": [
@@ -501,17 +501,216 @@
    "id": "3200b305",
    "metadata": {},
    "source": [
-    "- Before validators: run before Pydantic's internal parsing and validation (e.g. coercion of a str to an int). These are more flexible than after validators, but they also have to deal with the raw input, which in theory could be any arbitrary object. You should also avoid mutating the value directly if you are raising a validation error later in your validator function, as the mutated value may be passed to other validators if using unions.\n",
+    "- __Before validators__: run before Pydantic's internal parsing and validation (e.g. coercion of a str to an int). These are more flexible than after validators, but they also have to deal with the raw input, which in theory could be any arbitrary object. You should also avoid mutating the value directly if you are raising a validation error later in your validator function, as the mutated value may be passed to other validators if using unions.\n",
     "The value returned from this callable is then validated against the provided type annotation by Pydantic."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "349c586d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Musician(BaseModel):\n",
+    "    \"\"\"Class representing a musician with validated fields.\"\"\"\n",
+    "\n",
+    "    name: StrictStr = Field(\n",
+    "        pattern=r\"[A-Z]{1}[a-z]+ [A-Z]{1}[a-z]\",\n",
+    "        description=\"The name of the musician. First and last name, capitalized.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    instrument: StrictStr = Field(\n",
+    "        pattern=r\"(Guitar|Bass|Drums|Vocals|Keyboard)\",\n",
+    "        description=\"The instrument played by the musician.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    genre: StrictStr = Field(\n",
+    "        pattern=r\"[A-Za-z]+\",\n",
+    "        description=\"The genre of music the musician is associated with.\",\n",
+    "        frozen=True,\n",
+    "    )\n",
+    "    years_active: int = Field(\n",
+    "        ge=0,\n",
+    "        le=100,\n",
+    "        description=\"Number of years the musician has been active in their career.\",\n",
+    "    )\n",
+    "    is_active: StrictBool = Field(\n",
+    "        default=True,\n",
+    "        description=\"Indicates if the musician is currently active.\",\n",
+    "    )\n",
+    "    list_of_albums: list[StrictStr] = Field(\n",
+    "        default_factory=list,\n",
+    "        description=\"A list of the musician's albums.\",\n",
+    "    )\n",
+    "\n",
+    "    @field_validator('list_of_albums', mode='before')\n",
+    "    def check_albums_not_empty(cls, v):\n",
+    "        if not v:\n",
+    "            raise ValueError(\"The list of albums cannot be empty.\")\n",
+    "        return v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "f4d3c854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 2 validation errors for Musician\n",
+      "genre\n",
+      "  Field required [type=missing, input_value={'name': 'Juan Pablo', 'i...2, 'list_of_albums': []}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/missing\n",
+      "list_of_albums\n",
+      "  Value error, The list of albums cannot be empty. [type=value_error, input_value=[], input_type=list]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    juan_pablo = Musician(\n",
+    "        name=\"Juan Pablo\",\n",
+    "        instrument=\"Vocals\",\n",
+    "        years_active=2,\n",
+    "        list_of_albums=[],\n",
+    "    )\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a49f793e",
+   "metadata": {},
+   "source": [
+    "### 2.5.2 Model validators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d889159a",
+   "metadata": {},
+   "source": [
+    "Validation can also be performed on the entire model's data using the `model_validator()` decorator.\n",
+    "\n",
+    "Three different types of model validators can be used:\n",
+    "\n",
+    "- __After validators__: run after the whole model has been validated. As such, they are defined as instance methods and can be seen as post-initialization hooks. Important note: the validated instance should be returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b64c4c36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing_extensions import Self\n",
+    "\n",
+    "from pydantic import BaseModel, model_validator\n",
+    "\n",
+    "\n",
+    "class UserModel(BaseModel):\n",
+    "    username: str\n",
+    "    password: str\n",
+    "    password_repeat: str\n",
+    "\n",
+    "    @model_validator(mode='after')\n",
+    "    def check_passwords_match(self) -> Self:\n",
+    "        if self.password != self.password_repeat:\n",
+    "            raise ValueError('Passwords do not match')\n",
+    "        return self"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ffc4712b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for UserModel\n",
+      "  Value error, Passwords do not match [type=value_error, input_value={'username': 'user1', 'pa...t': 'securepassword123'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    UserModel(\n",
+    "        username=\"user1\",\n",
+    "        password=\"securepassword\",\n",
+    "        password_repeat=\"securepassword123\",\n",
+    "    )\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e26666ae",
+   "metadata": {},
+   "source": [
+    "- __Before validators__: are run before the model is instantiated. These are more flexible than after validators, but they also have to deal with the raw input, which in theory could be any arbitrary object. You should also avoid mutating the value directly if you are raising a validation error later in your validator function, as the mutated value may be passed to other validators if using unions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ba81a135",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "\n",
+    "from pydantic import BaseModel, model_validator\n",
+    "\n",
+    "\n",
+    "class UserModel(BaseModel):\n",
+    "    username: str\n",
+    "\n",
+    "    @model_validator(mode='before')\n",
+    "    @classmethod\n",
+    "    def check_card_number_not_present(cls, data: Any) -> Any:  \n",
+    "        if isinstance(data, dict):  \n",
+    "            if 'card_number' in data:\n",
+    "                raise ValueError(\"'card_number' should not be included\")\n",
+    "        return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "3afdc51f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: 1 validation error for UserModel\n",
+      "  Value error, 'card_number' should not be included [type=value_error, input_value={'username': 'user2', 'ca...: '1234-5678-9012-3456'}, input_type=dict]\n",
+      "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    UserModel(\n",
+    "        username=\"user2\",\n",
+    "        card_number=\"1234-5678-9012-3456\",\n",
+    "    )\n",
+    "except ValidationError as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
   }
  ],
  "metadata": {
