feat(pydantic): Explain order of validator

--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -711,6 +711,23 @@
     "except ValidationError as e:\n",
     "    print(f\"Error: {e}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25526ec1",
+   "metadata": {},
+   "source": [
+    "__Ordering of validators__:\n",
+    "\n",
+    "When using the annotated pattern, the order in which validators are applied is defined as follows: before and wrap validators are run from right to left, and after validators are then run from left to right.\n",
+    "Internally, validators defined using the decorator are converted to their annotated form counterpart and added last after the existing metadata for the field. This means that the same ordering logic applies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e97f0bb5",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
