--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -38,11 +38,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e7310c45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pydantic import BaseModel, ConfigDict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -90,14 +92,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d24bc9ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pydantic import BaseModel, ConfigDict\n",
-    "\n",
-    "\n",
     "class User(BaseModel):\n",
     "    id: int\n",
     "    name: str = 'Jane Doe'\n",
@@ -129,10 +128,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e174b51b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
+      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "from pydantic import BaseModel, ConfigDict, StrictBool, StrictInt, StrictStr\n",
     "\n",
@@ -732,7 +742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.2)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
