--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -38,13 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e7310c45",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from pydantic import BaseModel, ConfigDict"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -92,11 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "d24bc9ee",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pydantic import BaseModel, ConfigDict\n",
+    "\n",
+    "\n",
     "class User(BaseModel):\n",
     "    id: int\n",
     "    name: str = 'Jane Doe'\n",
@@ -128,21 +129,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "e174b51b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.13.2' requires the ipykernel package.\n",
-      "\u001b[1;31mInstall 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '/usr/local/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pydantic import BaseModel, ConfigDict, StrictBool, StrictInt, StrictStr\n",
     "\n",
@@ -742,7 +732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.13.2)",
    "language": "python",
    "name": "python3"
   },
