style(pydantic): set juan pablo's genre to reggaeton

--- a/notebooks/2.1-pydantic-explain.ipynb
+++ b/notebooks/2.1-pydantic-explain.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "d24bc9ee",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "e174b51b",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "e47c4599",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "e5feb8fc",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "e0f775a1",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Rock', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "4e60b840",
    "metadata": {},
    "outputs": [
@@ -265,7 +265,7 @@
       "Error: 1 validation error for Musician\n",
       "instrument\n",
       "  String should match pattern '(Guitar|Bass|Drums|Vocals|Keyboard)' [type=string_pattern_mismatch, input_value='Trumpet', input_type=str]\n",
-      "    For further information visit https://errors.pydantic.dev/2.11/v/string_pattern_mismatch\n"
+      "    For further information visit https://errors.pydantic.dev/2.12/v/string_pattern_mismatch\n"
      ]
     }
    ],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "c3c7b478",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
        "Musician(name='John Mayer', instrument='Guitar', genre='Blues', years_active=27, is_active=True)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "22701d21",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "2c1aa26a",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
       "Error: 1 validation error for Musician\n",
       "instrument\n",
       "  Field is frozen [type=frozen_field, input_value='Piano', input_type=str]\n",
-      "    For further information visit https://errors.pydantic.dev/2.11/v/frozen_field\n"
+      "    For further information visit https://errors.pydantic.dev/2.12/v/frozen_field\n"
      ]
     }
    ],
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "96539295",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "8fbd844f",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
       "Error: 1 validation error for Musician\n",
       "list_of_albums\n",
       "  Value error, The list of albums cannot be empty. [type=value_error, input_value=[], input_type=list]\n",
-      "    For further information visit https://errors.pydantic.dev/2.11/v/value_error\n"
+      "    For further information visit https://errors.pydantic.dev/2.12/v/value_error\n"
      ]
     }
    ],
@@ -488,7 +488,7 @@
     "    juan_pablo = Musician(\n",
     "        name=\"Juan Pablo\",\n",
     "        instrument=\"Vocals\",\n",
-    "        genre=\"Reggae\",\n",
+    "        genre=\"Reggaeton\",\n",
     "        years_active=2,\n",
     "        list_of_albums=[],\n",
     "    )\n",
@@ -732,7 +732,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.2)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
