--- a/notebooks/3.2-bayesian-opt-starter.ipynb
+++ b/notebooks/3.2-bayesian-opt-starter.ipynb
@@ -16,6 +16,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3bb0ba1f",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d4fd912c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import optuna\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestRegressor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3925132b",
+   "metadata": {},
+   "source": [
+    "## Options"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "64b99f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_data = \"../data/01_raw\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ed1e01d",
+   "metadata": {},
+   "source": [
+    "## Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "380c001f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet(os.path.join(path_data, \"fremotor1prem0304.parquet\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "51993523",
    "metadata": {},
    "source": [
@@ -48,8 +106,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
