adds docuemtation abou train/test/val splits

--- a/notebooks/1.0-analyze-data.ipynb
+++ b/notebooks/1.0-analyze-data.ipynb
@@ -23,6 +23,15 @@
     "- `Year` — The year of the observation.  \n",
     "  *This variable indicates the year of the record and should **not** be used in the modeling process.*\n",
     "\n",
+    "### ⚙️ Utils Variables \n",
+    "\n",
+    "The following four columns are created to facilitate the splitting of the dataset into the respective subsets used for training and validation of models:\n",
+    "\n",
+    "- `train_set` — Indicator variable equal to 1 if the observation belongs to the training subset (excluding validation and test data).  \n",
+    "- `val_set` — Indicator variable equal to 1 if the observation belongs to the validation subset.  \n",
+    "- `test_set` — Indicator variable equal to 1 if the observation belongs to the test subset.  \n",
+    "- `big_train_set` — Indicator variable equal to 1 if the observation belongs to the combined training and validation subsets (i.e. all data except the test set).  \n",
+    "\n",
     "---\n",
     "\n",
     "### 🎯 Target Variable\n",
