feat(pandera): Update exercise columns check

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -31,7 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pandera.pandas as pa"
    ]
   },
   {
@@ -369,6 +370,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8796fe82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MaritalStatus\n",
+       "NaN           18615\n",
+       "Cohabiting     5764\n",
+       "Married        1917\n",
+       "Single         1130\n",
+       "Widowed         278\n",
+       "Divorced        104\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"MaritalStatus\"].value_counts(dropna=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8f9e9022",
    "metadata": {},
@@ -381,16 +410,27 @@
    "id": "2e9d6d65",
    "metadata": {},
    "source": [
-    "**Goal**: The goal of this section is to validate the dataframe we will use to train our model."
+    "**Goal**: The goal of this section is to validate the dataframe we will use to train our model.\n",
+    "\n",
+    "We want to validate the dataframe before training our model. Your goal is to make sure the columns will verify the following rules:\n",
+    "* **Year**: Check the year are between 2003 and 2004.\n",
+    "* **DrivAge**: Make sure the driver's age are possible (e.g. between 18 and 100).\n",
+    "* **DrivGender**: The gender is either 'M' or 'F'.\n",
+    "* **MaritalStatus**: Possible values \"Cohabiting\", \"Married\", \"Single\", \"Widowed\" or \"Divorced\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a50fb0b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "schema_df = pa.DataFrameSchema({\n",
+    "    \"IDpol\": pa.Column(float),\n",
+    "    ### YOUR CODE HERE ###\n",
+    "})"
+   ]
   },
   {
    "cell_type": "code",
