feat(pandera): Add more checks for the exercise

--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c3d0586d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4e432369",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "94b28107",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d798c3c6",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "8a677555",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "5    487.8     1000173.101  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,30 +371,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8796fe82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MaritalStatus\n",
-       "NaN           18615\n",
-       "Cohabiting     5764\n",
-       "Married        1917\n",
-       "Single         1130\n",
-       "Widowed         278\n",
-       "Divorced        104\n",
+       "Area\n",
+       "A5     8060\n",
+       "A3     6797\n",
+       "A2     3976\n",
+       "A7     3729\n",
+       "A4     1963\n",
+       "A9     1840\n",
+       "A8     1030\n",
+       "A6      350\n",
+       "A10      41\n",
+       "A12      22\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"MaritalStatus\"].value_counts(dropna=False)"
+    "df[\"Area\"].value_counts(dropna=False)"
    ]
   },
   {
@@ -416,19 +420,33 @@
     "* **Year**: Check the year are between 2003 and 2004.\n",
     "* **DrivAge**: Make sure the driver's age are possible (e.g. between 18 and 100).\n",
     "* **DrivGender**: The gender is either 'M' or 'F'.\n",
-    "* **MaritalStatus**: Possible values \"Cohabiting\", \"Married\", \"Single\", \"Widowed\" or \"Divorced\"."
+    "* **MaritalStatus**: Possible values \"Cohabiting\", \"Married\", \"Single\", \"Widowed\" or \"Divorced\".\n",
+    "* **BonusMalus**: The value of the bonus / malus is over 50.\n",
+    "* **VehAge**: Make sure the vehicule age is possible.\n",
+    "* **VehGas**: Either \"Regular\" or \"Diesel\".\n",
+    "* **Area**: Possible values are from A1 to A12 included."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a50fb0b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "schema_df = pa.DataFrameSchema({\n",
     "    \"IDpol\": pa.Column(float),\n",
+    "    \"PayFreq\": pa.Column(str, pa.Check.isin([\"Monthly\", \"Quarterly\", \"Semiannual\", \"Annual\"])),\n",
+    "    \"JobCode\": pa.Column(str, pa.Check.isin([\n",
+    "        \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\", \"Retailer\",\n",
+    "    ])),\n",
+    "    \"VehClass\": pa.Column(str, pa.Check.isin([\n",
+    "        \"Cheapest\", \"Cheaper\", \"Cheap\", \"Medium low\", \"Medium\", \"Medium high\", \"Expensive\", \"More expensive\", \"Most expensive\",\n",
+    "    ])),\n",
+    "    \"VehPower\": pa.Column(str, pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
+    "    ######################\n",
     "    ### YOUR CODE HERE ###\n",
+    "    ######################\n",
     "})"
    ]
   },
