--- a/notebooks/assignment.ipynb
+++ b/notebooks/assignment.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "c3d0586d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "4e432369",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "94b28107",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "d798c3c6",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "8a677555",
    "metadata": {},
    "outputs": [
@@ -360,7 +360,7 @@
        "5    487.8     1000173.101  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,34 +371,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "8796fe82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Area\n",
-       "A5     8060\n",
-       "A3     6797\n",
-       "A2     3976\n",
-       "A7     3729\n",
-       "A4     1963\n",
-       "A9     1840\n",
-       "A8     1030\n",
-       "A6      350\n",
-       "A10      41\n",
-       "A12      22\n",
+       "PayFreq\n",
+       "Half-yearly    15456\n",
+       "Annual          9551\n",
+       "Quarterly       2068\n",
+       "Monthly          733\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Area\"].value_counts(dropna=False)"
+    "df[\"PayFreq\"].value_counts(dropna=False)"
    ]
   },
   {
@@ -422,6 +416,8 @@
     "* **DrivGender**: The gender is either 'M' or 'F'.\n",
     "* **MaritalStatus**: Possible values \"Cohabiting\", \"Married\", \"Single\", \"Widowed\" or \"Divorced\".\n",
     "* **BonusMalus**: The value of the bonus / malus is over 50.\n",
+    "* **LicenceNb**: The licence number is over 1.\n",
+    "* **JobCode**: The possible values are \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\" or \"Retailer\",\n",
     "* **VehAge**: Make sure the vehicule age is possible.\n",
     "* **VehGas**: Either \"Regular\" or \"Diesel\".\n",
     "* **Area**: Possible values are from A1 to A12 included."
@@ -429,31 +425,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "a50fb0b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "schema_df = pa.DataFrameSchema({\n",
-    "    \"IDpol\": pa.Column(float),\n",
-    "    \"PayFreq\": pa.Column(str, pa.Check.isin([\"Monthly\", \"Quarterly\", \"Semiannual\", \"Annual\"])),\n",
-    "    \"JobCode\": pa.Column(str, pa.Check.isin([\n",
-    "        \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\", \"Retailer\",\n",
-    "    ])),\n",
-    "    \"VehClass\": pa.Column(str, pa.Check.isin([\n",
+    "    \"IDpol\": pa.Column(str),\n",
+    "    \"PayFreq\": pa.Column(str, checks=pa.Check.isin([\"Annual\", \"Half-yearly\", \"Quarterly\", \"Monthly\"])),\n",
+    "    \"VehClass\": pa.Column(str, checks=pa.Check.isin([\n",
     "        \"Cheapest\", \"Cheaper\", \"Cheap\", \"Medium low\", \"Medium\", \"Medium high\", \"Expensive\", \"More expensive\", \"Most expensive\",\n",
     "    ])),\n",
-    "    \"VehPower\": pa.Column(str, pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
+    "    \"VehPower\": pa.Column(str, checks=pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
+    "    \"VehUsage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Private+trip to office\", \"Professional\", \"Professional run\",\n",
+    "    ])),\n",
+    "    \"Garage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Closed zbox\", \"Closed collective parking\", \"Opened collective parking\", \"Street\",\n",
+    "    ])),\n",
     "    ######################\n",
     "    ### YOUR CODE HERE ###\n",
     "    ######################\n",
-    "})"
+    "})\n",
+    "\n",
+    "df_validated = schema_df.validate(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5c51faf",
+   "metadata": {},
+   "source": [
+    "However, as you can see, some features contain NaN values. To handle this issue, you have several solutions:\n",
+    "* In the dataframe schema from pandera, set the option of possible NaN values to True. We don't recommend this approach as many models can't handle NaN values or you want to make sure to use them properly.\n",
+    "* You can set the option in the pandera schema to drop rows with NaN values.\n",
+    "* You can handle it with the classical feature engineering technics (feature imputing, creating new category, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b78fda72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution\n",
+    "def fill_missing_values(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Fill missing values.\n",
+    "    \n",
+    "    Args:\n",
+    "        df (pd.DataFrame): Input DataFrame with potential missing values.\n",
+    "    \"\"\"\n",
+    "    df[\"JobCode\"] = df[\"JobCode\"].fillna(df[\"JobCode\"].mode()[0])\n",
+    "    df[\"MaritalStatus\"] = df[\"MaritalStatus\"].fillna(df[\"MaritalStatus\"].mode()[0])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "ff84dcb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solution\n",
+    "schema_df = pa.DataFrameSchema({\n",
+    "    \"IDpol\": pa.Column(str),\n",
+    "    \"PayFreq\": pa.Column(str, checks=pa.Check.isin([\"Annual\", \"Half-yearly\", \"Quarterly\", \"Monthly\"])),\n",
+    "    \"VehClass\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Cheapest\", \"Cheaper\", \"Cheap\", \"Medium low\", \"Medium\", \"Medium high\", \"Expensive\", \"More expensive\", \"Most expensive\",\n",
+    "    ])),\n",
+    "    \"VehPower\": pa.Column(str, checks=pa.Check.isin([f\"P{i}\" for i in range(1, 21)])),\n",
+    "    \"VehUsage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Private+trip to office\", \"Professional\", \"Professional run\",\n",
+    "    ])),\n",
+    "    \"Garage\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Closed zbox\", \"Closed collective parking\", \"Opened collective parking\", \"Street\",\n",
+    "    ])),\n",
+    "    ######################\n",
+    "    ### YOUR CODE HERE ###\n",
+    "    ######################\n",
+    "    \"Year\": pa.Column(int, checks=[pa.Check.ge(2003), pa.Check.le(2004)], coerce=True),\n",
+    "    \"DrivAge\": pa.Column(int, checks=[pa.Check.ge(18), pa.Check.le(100)], coerce=True),\n",
+    "    \"DrivGender\": pa.Column(str, checks=pa.Check.isin([\"M\", \"F\"])),\n",
+    "    \"MaritalStatus\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Cohabiting\", \"Married\", \"Single\", \"Widowed\", \"Divorced\",\n",
+    "    ])),\n",
+    "    \"BonusMalus\": pa.Column(int, checks=pa.Check.ge(50), coerce=True),\n",
+    "    \"LicenceNb\": pa.Column(int, checks=pa.Check.ge(1), coerce=True),\n",
+    "    \"JobCode\": pa.Column(str, checks=pa.Check.isin([\n",
+    "        \"Private employee\", \"Public employee\", \"Retiree\", \"Other\", \"Craftsman\", \"Farmer\", \"Retailer\", \"Unknown\",\n",
+    "    ])),\n",
+    "    \"VehAge\": pa.Column(int, checks=pa.Check.ge(0), coerce=True),\n",
+    "    \"VehGas\": pa.Column(str, checks=pa.Check.isin([\"Regular\", \"Diesel\"])),\n",
+    "    \"Area\": pa.Column(str, checks=pa.Check.isin([f\"A{i}\" for i in range(1, 13)])),\n",
+    "})\n",
+    "\n",
+    "df_filled = fill_missing_values(df)\n",
+    "\n",
+    "df_validated = schema_df.validate(df_filled)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff84dcb5",
+   "id": "999d3b0d",
    "metadata": {},
    "outputs": [],
    "source": []
